# Mangaba_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: static.yml
Developer_documentation/: crates.js  help.html  settings.html  src-files.js
Developer_documentation/mangaba/: all.html  index.html
Developer_documentation/mangaba/core/: index.html  sidebar-items.js
Developer_documentation/search.index/: 00e5dcc6af.js  05a53146e4.js  05dfbe7994.js  06ae7fb00a.js  074c873d05.js  091254e24d.js  0a117082c2.js  0a15f0cde9.js  0a2d2e8d03.js  0b3d74f535.js  0cb3ff35fa.js  0cc1b2b0f8.js  0d5a5d0aae.js  127a336196.js  130a3fad36.js  1369b71ae7.js  187e8100bc.js  191e65f547.js  1aea9f54be.js  1de05461c8.js  1e53c2a1fe.js  1f1ca08248.js  2450b3f1ec.js  257800ac45.js  26a0f07e0b.js  272a7772ad.js  2777d2118f.js  28bab6b1bd.js  2b12bfa81d.js  3003dd3991.js  314b961270.js  32571aa9e6.js  3281c12393.js  3333b2e6f1.js  33cdde88e3.js  34b24ece69.js  354d1c158b.js  3599fff691.js  3df7ed7312.js  4006ffeada.js  (+48 more)
Developer_documentation/search.index/crateNames/: b16dfce773.js
Developer_documentation/search.index/desc/: 726ca268cb.js
Developer_documentation/search.index/entry/: 1d944a4776.js
Developer_documentation/search.index/function/: 0e895c9390.js
Developer_documentation/search.index/generic_inverted_index/: 38b31f6b7f.js
Developer_documentation/search.index/name/: 2bc89ddfaf.js
documentation/: configuration.md  getting-started.md  index.md
documentation/features/: agent.md  crew.md  embeddings.md  errors-retry.md  events-callbacks.md  guardrails.md  llm.md  memory.md  output-parsers.md  pipeline.md  planner.md  prompt-templates.md  protocols.md  rag.md  tools.md
examples/: .env.example  advanced_crew.rs  multi_agent_crew.rs  quick_start.rs
src/: lib.rs
src/core/: agent.rs  callbacks.rs  config.rs  crew.rs  errors.rs  events.rs  guardrails.rs  memory.rs  output_parsers.rs  pipeline.rs  planner.rs  prompt_templates.rs  react.rs  retry.rs  task.rs  types.rs
tests/: fixes_test.rs  integration_test.rs  react_test.rs  tools_test.rs
(+342 files in other folders)
