[package]
name = "mangaba"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
regex = "1.10"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
once_cell = "1.19"
rand = "0.8"
csv = "1.3"
pdf-extract = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
lru = "0.12"
tokio-stream = "0.1"
futures = "0.3"
dotenvy = "0.15"
