[package]
name = "mangaba"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Ysrael SacraS"]
description = "A modular, provider-agnostic LLM agent framework in Rust (ReAct, RAG, multi-agent crews, A2A/MCP)."
license = "MIT"
repository = "https://github.com/ysrael12/Mangaba_rust"
homepage = "https://github.com/ysrael12/Mangaba_rust"
documentation = "https://docs.rs/mangaba"
readme = "README.md"
keywords = ["llm", "agent", "ai", "rag", "tokio"]
categories = ["api-bindings", "asynchronous"]
# Keep the published .crate tarball lean — ship only what the library needs.
exclude = [
    ".env",
    ".env.*",
    "target/",
    "*.log",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
regex = "1.10"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
once_cell = "1.19"
rand = "0.8"
csv = "1.3"
pdf-extract = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
lru = "0.12"
tokio-stream = "0.1"
futures = "0.3"
dotenvy = "0.15"
